# separatrix_locator

./: .gitignore  README.md  TODO.md  __init__.py  pyproject.toml  requirements.txt  setup.py
configs/: 1bitflipflop2D.py  1bitflipflop64D.py  base.py  bistable2d.py  duffing.py  finkelstein_fontolan.py  preprocess_1bitflipflop64D.py
core/: __init__.py  models.py  separatrix_locator.py  training.py
distributions/: __init__.py  base.py  gaussian.py
dynamics/: bistableND.py  duffing.py
examples/: 01_bistable_1d.ipynb  02_duffing_oscillator.ipynb
experiments/: __init__.py  bistable2d_gaussian.py  bistable2d_gaussian_config.py  config.py  run_discrete_reduction_flipflop_kbit.py  run_experiment.py  simple_experiment.py
experiments/configs/: bistable2d.py
notebook_tutorials/: 01_bistable_1d.ipynb  02_duffing_oscillator.ipynb  03_rnn_flipflop_2d.ipynb  04_train_flipflop_rnn.ipynb  05_finkelstein_fontolan_rnn.ipynb  06_transient_separatrix.ipynb  07_discrete_reduction_flipflop.ipynb
old_configs/: bistable1D_sin.yaml  finkelstein_fontolan.yaml  main_1bitflipflop128D.yaml  main_1bitflipflop256D.yaml  main_1bitflipflop64D.yaml  main_2bitflipflop2D.yaml  main_2bitflipflop3D.yaml  twolimitcycles.yaml
old_configs/dynamical_systems/: 1bitflipflop_2D.yaml  1bitflipflop_2D_long.yaml  1bitflipflop_32D.yaml  1bitflipflop_Vanilla128D_long_isotropic.yaml  1bitflipflop_Vanilla256D_long_isotropic.yaml  1bitflipflop_Vanilla32D_long_isotropic.yaml  1bitflipflop_Vanilla64D_long_isotropic.yaml  1bitflipflop_Vanilla668D_long_hermitecurvesampler.yaml  1bitflipflop_Vanilla668D_long_isotropic.yaml  2bitflipflop_2D.yaml  2bitflipflop_32D_long.yaml  2bitflipflop_3D.yaml  affine_bistable2D.yaml  bistable1D.yaml  bistable2D.yaml  bistable2D_scaled.yaml  bistable3D.yaml  bistable4D_nonnormal.yaml  bistableND.yaml  bistable_rslds_k5.yaml  duffing.yaml  finkelstein_fontolan_RNN.yaml  finkelstein_fontolan_RNN_multiscale_mixture_on_separatrix_speed40.yaml  finkelstein_fontolan_RNN_multiscale_mixture_on_separatrix_speed40_anisotropic.yaml  finkelstein_fontolan_RNN_multiscale_on_separatrix.yaml  finkelstein_fontolan_RNN_multiscale_on_separatrix_speed40.yaml  finkelstein_fontolan_RNN_multiscale_on_separatrix_speedup40.yaml  hopfield.yaml  microbiome_GLV_11D.yaml  multistable1D.yaml  parting2D.yaml  parting2D_twobasins.yaml  radial2D_bistable.yaml  radial2D_bistable_limit_cycle.yaml
old_configs/models/: AnisotropicRBF.yaml  BistableLinear.yaml  DNN_ReLU_layers8.yaml  DNN_layers8.yaml  DeepResNet.yaml  s4.yaml  (+13 more)
plotting/: plots.py
scratch/: dynamical_functions.py  old_main.py  rnn_decision_making.py  task_utils.py
scripts/: compare_compute_phi_timing.py
src/: __init__.py  install_standalone.py
tests/: __init__.py  simple_demo.ipynb  test.ipynb  test_bistable_nd.py  test_compute_phi_and_dot_prod.py  test_discrete_reduction_losses.py  test_duffing.py
utils/: plotting.py
(+96 files in other folders)
