[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "separatrix-locator"
version = "0.1.0"
description = "Tools for locating separatrices in dynamical systems"
readme = "README.md"
authors = [{ name = "Your Name" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
  "torch>=1.9.0",
  "numpy>=1.21.0",
  "matplotlib>=3.3.0",
  "seaborn>=0.11.0",
  "scikit-learn>=1.0.0",
  "torchdiffeq>=0.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=6.0",
  "pytest-cov>=2.0",
  "black>=21.0",
  "flake8>=3.8",
  "mypy>=0.800",
]
notebooks = [
  "jupyter>=1.0",
  "ipykernel>=6.0",
  "nbformat>=5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
separatrix_locator = [
  "examples/*.ipynb",
  "examples/*.py",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[project.scripts]
separatrix-locator = "cli:main"
