[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "separatrix-locator"
version = "0.1.0"
description = "Tools for locating separatrices in dynamical systems"
readme = "README.md"
authors = [{ name = "Your Name" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
  # NumPy 2.x breaks some compiled extensions; pin <2 for now
  "numpy>=1.21,<2",
  # Pin torch below 2.2 to avoid NumPy 2 coupling; Python 3.9 compatible
  "torch>=1.13,<2.2",
  "matplotlib",
  "seaborn",
  "scikit-learn",
  "torchdiffeq"
]

[project.optional-dependencies]
dev = [
  "pytest>=6.0",
  "pytest-cov>=2.0",
  "black>=21.0",
  "flake8>=3.8",
  "mypy>=0.800",
]
notebooks = [
  "jupyter>=1.0",
  "ipykernel>=6.0",
  "nbformat>=5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
separatrix_locator = [
  "notebook_tutorials/*.ipynb",
  "notebook_tutorials/*.py",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["separatrix_locator", "separatrix_locator.*"]

[project.scripts]
separatrix-locator = "separatrix_locator.cli:main"
